--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# with inspiration from https://github.com/github/gitignore
+# with inspiration from https://github.com/github/gitignore (MacOS, VSCode)
 
 ## MacOS
 # General
